# awesome-babushka-auth-service

./: .flake8  .gitignore  .pylintrc  CODEOWNERS  README.md  main.py  package.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
services/auth-service/: requirements.txt
services/auth-service/.devcontainer/: devcontainer.json
services/auth-service/src/: main.py
services/auth-service/src/auth_service/: main.py
services/auth-service/src/auth_service/api/v1/: routes.py
services/auth-service/src/auth_service/core/: config.py  security.py
services/auth-service/src/auth_service/db/: database.py  models.py  schemas.py
services/auth-service/src/auth_service/services/: auth.py  email_agent.py
src/auth_service/: main.py
src/auth_service/api/v1/: auth.py  token.py  user.py
src/auth_service/core/: config.py  security.py  token.py
src/auth_service/db/: enums.py  models.py  schemas.py
src/auth_service/services/: auth.py  token.py  user.py
src/auth_service/utils/: middleware.py
ui/: package.json
ui/.devcontainer/: devcontainer.json
ui/src/: App.tsx
ui/src/components/Authentication/Signin/: SigninForm.tsx
ui/src/components/Authentication/Signup/: SignupForm.tsx
ui/src/components/SocialMedia/LeftSidenav/: LeftSidenav.tsx
ui/src/components/commons/: neumorph-button.tsx
ui/src/layouts/: SocialMediaLayout.tsx
ui/src/pages/Home/: HomePage.tsx
ui/src/pages/Welcome/: WelcomePage.tsx
ui/src/routes/: ProtectedRoute.tsx  index.tsx
